fraud-workbench.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: "2026-06-09T20:25:36Z"
  generation: 12
  labels:
    app: fraud-workbench
    opendatahub.io/dashboard: "true"
    opendatahub.io/odh-managed: "true"
    opendatahub.io/user: openshif-2dtbanking-2dap
  name: fraud-workbench
  namespace: openshif-tbanking-ap-dev
  ownerReferences:
  - apiVersion: kubeflow.org/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: Notebook
    name: fraud-workbench
    uid: 63f8ec36-b608-402b-9e9d-2fd17e286115
  resourceVersion: "5651407387"
  uid: 4361ee05-efa8-41be-b0c3-6f2a2dc472e0
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      statefulset: fraud-workbench
  serviceName: ""
  template:
    metadata:
      annotations:
        kubeflow-resource-stopped: odh-notebook-controller-lock
        opendatahub.io/accelerator-name: ""
        opendatahub.io/accelerator-profile-namespace: ""
        opendatahub.io/hardware-profile-name: ""
        opendatahub.io/hardware-profile-namespace: ""
        opendatahub.io/image-display-name: Jupyter | Minimal | CPU | Python 3.12
        opendatahub.io/legacy-hardware-profile-name: ""
        opendatahub.io/username: openshif-tbanking-ap
        opendatahub.io/workbench-image-namespace: ""
        openshift.io/description: ""
        openshift.io/display-name: fraud-workbench
      labels:
        app: fraud-workbench
        notebook-name: fraud-workbench
        opendatahub.io/dashboard: "true"
        opendatahub.io/odh-managed: "true"
        opendatahub.io/user: openshif-2dtbanking-2dap
        opendatahub.io/workbenches: "true"
        statefulset: fraud-workbench
    spec:
      containers:
      - env:
        - name: NOTEBOOK_ARGS
          value: |-
            --ServerApp.port=8888
                              --ServerApp.token=''
                              --ServerApp.password=''
                              --ServerApp.base_url=/notebook/openshif-tbanking-ap-dev/fraud-workbench
                              --ServerApp.quit_button=False
                              --ServerApp.tornado_settings={"user":"openshif-2dtbanking-2dap","hub_host":"https://rhods-dashboard-redhat-ods-applications.apps.rm2.thpm.p1.openshiftapps.com","hub_prefix":"/projects/openshif-tbanking-ap-dev"}
        - name: JUPYTER_IMAGE
          value: image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/s2i-minimal-notebook:2025.2
        - name: PIPELINES_SSL_SA_CERTS
          value: /etc/pki/tls/custom-certs/ca-bundle.crt
        - name: GIT_SSL_CAINFO
          value: /etc/pki/tls/custom-certs/ca-bundle.crt
        - name: PIP_CERT
          value: /etc/pki/tls/custom-certs/ca-bundle.crt
        - name: REQUESTS_CA_BUNDLE
          value: /etc/pki/tls/custom-certs/ca-bundle.crt
        - name: SSL_CERT_FILE
          value: /etc/pki/tls/custom-certs/ca-bundle.crt
        - name: NB_PREFIX
          value: /notebook/openshif-tbanking-ap-dev/fraud-workbench
        image: image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/s2i-minimal-notebook:2025.2
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /notebook/openshif-tbanking-ap-dev/fraud-workbench/api
            port: notebook-port
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: fraud-workbench
        ports:
        - containerPort: 8888
          name: notebook-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /notebook/openshif-tbanking-ap-dev/fraud-workbench/api
            port: notebook-port
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 8Gi
          requests:
            cpu: "1"
            memory: 8Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src/
          name: fraud-workbench-storage
        - mountPath: /dev/shm
          name: shm
        - mountPath: /etc/pki/tls/custom-certs/ca-bundle.crt
          name: trusted-ca
          readOnly: true
          subPath: ca-bundle.crt
        - mountPath: /opt/app-root/pipeline-runtimes/
          name: runtime-images
        workingDir: /opt/app-root/src
      - args:
        - --provider=openshift
        - --https-address=:8443
        - --http-address=
        - --openshift-service-account=fraud-workbench
        - --cookie-secret-file=/etc/oauth/config/cookie_secret
        - --cookie-expire=24h0m0s
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        - --upstream=http://localhost:8888
        - --upstream-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - --email-domain=*
        - --skip-provider-button
        - --client-id=fraud-workbench-openshif-tbanking-ap-dev-oauth-client
        - --client-secret-file=/etc/oauth/client/secret
        - --scope=user:info user:check-access
        - --openshift-sar={"verb":"get","resource":"notebooks","resourceAPIGroup":"kubeflow.org","resourceName":"fraud-workbench","namespace":"$(NAMESPACE)"}
        - --logout-url=https://rhods-dashboard-redhat-ods-applications.apps.rm2.thpm.p1.openshiftapps.com/projects/openshif-tbanking-ap-dev?notebookLogout=fraud-workbench
        image: registry.redhat.io/openshift4/ose-oauth-proxy-rhel9@sha256:427e5f50d6f2fc229add3900d8658200c6f4f17c2851a226d603b2b999c5889d
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /oauth/healthz
            port: oauth-proxy
            scheme: HTTPS
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: oauth-proxy
        ports:
        - containerPort: 8443
          name: oauth-proxy
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /oauth/healthz
            port: oauth-proxy
            scheme: HTTPS
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 100m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/oauth/client
          name: oauth-client
        - mountPath: /etc/oauth/config
          name: oauth-config
        - mountPath: /etc/tls/private
          name: tls-certificates
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: fraud-workbench
      serviceAccountName: fraud-workbench
      terminationGracePeriodSeconds: 30
      volumes:
      - name: fraud-workbench-storage
        persistentVolumeClaim:
          claimName: fraud-workbench-storage
      - emptyDir:
          medium: Memory
        name: shm
      - configMap:
          defaultMode: 420
          items:
          - key: ca-bundle.crt
            path: ca-bundle.crt
          name: workbench-trusted-ca-bundle
          optional: true
        name: trusted-ca
      - name: oauth-config
        secret:
          defaultMode: 420
          secretName: fraud-workbench-oauth-config
      - name: oauth-client
        secret:
          defaultMode: 420
          secretName: fraud-workbench-oauth-client
      - name: tls-certificates
        secret:
          defaultMode: 420
          secretName: fraud-workbench-tls
      - configMap:
          defaultMode: 420
          name: pipeline-runtime-images
          optional: true
        name: runtime-images
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 0
  collisionCount: 0
  currentRevision: fraud-workbench-84948fc6b4
  observedGeneration: 12
  replicas: 0
  updateRevision: fraud-workbench-84948fc6b4
