worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: banking-app
  labels:
    app: worker-service
spec:
  selector:
    app: worker-service
  ports:
    - name: metrics
      port: 4000
      targetPort: 4000
